--- a/package.json
+++ b/package.json
@@ -10,11 +10,23 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@googlemaps/places": "^1.6.0",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
     "D": "^1.0.0",
     "dotenv": "^16.4.5",
-    "linebot": "^1.6.1",
-    "nodemon": "^3.1.2"
-  }
+    "linebot": "^1.6.1"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.5.0",
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.2.0",
+    "globals": "^15.5.0",
+    "nodemon": "^3.1.4"
+  },
+  "keywords": []
 }
